# Fresbys

./: .gitignore  README.md  cyber_one.sqlite3  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_01_29_2247-d5c27bd0503f_init_group_and_user_table.py
api_v1/: __init__.py
api_v1/group/: crud.py  routers.py  schemas.py
api_v1/users/: crud.py  routers.py  schemas.py
core/config/: conf.py  db_helper.py
core/models/: __init__.py  base.py  group.py  user.py
